# learn_opengl_dot_com_exercise

./: .gitignore  .gitmodules  CMakeLists.txt  README.org  gen_gtags.sh  note.org
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: 001_hello_window.c  002_triangle_1.c  003_shader_2.c  003_shader_3.c  004_texture_2.c  005_transform_1.c  005_transform_2.c  006_coordinate_1.c  006_coordinate_3.c  006_coordinate_4.c  007_camera_1.c  007_camera_2.c  007_camera_3.c
src/1.getting_started/1.1.hello_window/: hello_window.c
src/1.getting_started/1.2.hello_window_clear/: hello_window.c
src/1.getting_started/2.1.hello_triangle/: hello_triangle.c
src/1.getting_started/2.2.hello_triangle_indexed/: hello_triangle.c
src/1.getting_started/2.3.hello_triangle_exercise1/: hello_triangle.c
src/1.getting_started/2.4.hello_triangle_exercise2/: hello_triangle.c
src/1.getting_started/2.5.hello_triangle_exercise3/: hello_triangle.c
src/1.getting_started/3.1.shaders_uniform/: shader.c
src/1.getting_started/3.2.shaders_interpolation/: shader.c
src/1.getting_started/3.3.shaders_class/: 3.3.shader.fs  3.3.shader.vs  shader.c
src/1.getting_started/4.1.textures/: 4.1.shader.fs  4.1.shader.vs  textures.c
src/1.getting_started/4.2.textures_combined/: 4.2.shader.fs  textures.c
src/1.getting_started/5.1.transformations/: 5.1.shader.fs  5.1.shader.vs  trasform.c
src/1.getting_started/5.2.transformations_exercise2/: 5.2.shader.fs  5.2.shader.vs  transform.c
src/1.getting_started/6.1.coordinate_systems/: 6.1.coordinate.fs  6.1.coordinate.vs  coordinate.c
src/1.getting_started/6.2.coordinate_systems_depth/: 6.2.shader.fs  6.2.shader.vs  coordinate.c
src/1.getting_started/6.3.coordinate_systems_multiple/: 6.3.shader.vs  coordinate.c
src/1.getting_started/7.1.camera_circle/: 7.1.shader.fs  camera.c
src/1.getting_started/7.2.camera_keyboard_dt/: 7.2.shader.vs  camera.c
src/1.getting_started/7.3.camera_mouse_zoom/: camera.c
src/1.getting_started/7.4.camera_class/: camera_class.c
src/2.lighting/1.1.colors/: 1.1.colors.fs  1.1.colors.vs  1.1.lamp.fs  1.1.lamp.vs  colors.c
src/2.lighting/2.1.basic_lighting_diffuse/: 2.1.cube.fs  2.1.cube.vs  2.1.lamp.vs  main.c
src/2.lighting/2.2.basic_lighting_specular/: main.c
src/libs/: camera.c  camera.h  shader.c  shader.h
